--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -11,7 +11,8 @@
 	}
 }
 
-css rule but you apply extend to it
+//css rule but you apply extend to it
+//exted ends up with less mark up produced
 .clearfixed {
 	&:after {
 		display: table;
