--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,11 @@
-css rule but you apply extend to it
-.clearfixed:after, css rule but you apply extend to it
-div:after,
-css rule but you apply extend to it section:after {
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.clearfixed:after, div:after,
+section:after {
   display: table;
   content: " ";
   clear: both;
@@ -22,56 +26,104 @@ body:after {
 header,
 nav,
 main,
-section,
-aside {
+aside,
+section {
   background: rgba(255, 255, 255, 0.7);
   border: solid 2px rgba(0, 0, 0, 0.7);
 }
 
 main {
-  width: 66.10169%;
+  width: 66.66667%;
   float: left;
-  margin-right: 1.69492%;
+  padding-left: 0.83333%;
+  padding-right: 0.83333%;
 }
 
 aside {
-  width: 32.20339%;
-  float: right;
-  margin-right: 0;
+  width: 33.33333%;
+  float: left;
+  padding-left: 0.83333%;
+  padding-right: 0.83333%;
 }
 
 .gallery img {
-  width: 15.25424%;
+  width: 33.33333%;
   float: left;
+  padding-left: 0.83333%;
+  padding-right: 0.83333%;
 }
-.gallery img:nth-child(6n + 1) {
+.gallery img:nth-child(3n + 1) {
   margin-left: 0;
   margin-right: -100%;
   clear: both;
-  margin-left: 0;
 }
-.gallery img:nth-child(6n + 2) {
-  margin-left: 16.94915%;
+.gallery img:nth-child(3n + 2) {
+  margin-left: 33.33333%;
   margin-right: -100%;
   clear: none;
 }
-.gallery img:nth-child(6n + 3) {
-  margin-left: 33.89831%;
+.gallery img:nth-child(3n + 3) {
+  margin-left: 66.66667%;
   margin-right: -100%;
   clear: none;
 }
-.gallery img:nth-child(6n + 4) {
-  margin-left: 50.84746%;
-  margin-right: -100%;
-  clear: none;
+
+@media (min-width: 481px) and (max-width: 768px) {
+  main {
+    width: 50%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%;
+  }
+
+  aside {
+    width: 50%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%;
+  }
+
+  .gallery img {
+    width: 50%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%;
+  }
+  .gallery img:nth-child(2n + 1) {
+    margin-left: 0;
+    margin-right: -100%;
+    clear: both;
+  }
+  .gallery img:nth-child(2n + 2) {
+    margin-left: 50%;
+    margin-right: -100%;
+    clear: none;
+  }
 }
-.gallery img:nth-child(6n + 5) {
-  margin-left: 67.79661%;
-  margin-right: -100%;
-  clear: none;
-}
-.gallery img:nth-child(6n + 6) {
-  margin-left: 84.74576%;
-  margin-right: -100%;
-  clear: none;
+@media (min-width: 1px) and (max-width: 480px) {
+  main {
+    width: 100%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%;
+  }
+
+  aside {
+    width: 100%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%;
+  }
+
+  .gallery img {
+    width: 91.66667%;
+    float: left;
+    padding-left: 0.83333%;
+    padding-right: 0.83333%;
+  }
+  .gallery img:nth-child(1n + 1) {
+    margin-left: 0;
+    margin-right: -100%;
+    clear: both;
+  }
 }
